# Zeditor

./: CLAUDE.md  Cargo.toml  README.md
ai_directives/: INDEX.md  proejct_brief_14.md  project_brief_1.md  project_brief_10.md  project_brief_11.md  project_brief_12.md  project_brief_13.md  project_brief_15.md  project_brief_16.md  project_brief_17.md  project_brief_18.md  project_brief_2.md  project_brief_3.md  project_brief_4.md  project_brief_5.md  project_brief_6.md  project_brief_7.md  project_brief_8.md  project_brief_9.md
ai_directives/logs/: brief_10_log.md  brief_11_log.md  brief_12_log.md  brief_13_log.md  brief_14_log.md  brief_15_log.md  brief_16_log.md  brief_2_log.md  brief_3_log.md  brief_4_log.md  brief_5_log.md  brief_6_log.md  brief_7_log.md  brief_8_log.md  brief_9_log.md
crates/zeditor-core/: Cargo.toml
crates/zeditor-core/src/: commands.rs  effects.rs  error.rs  lib.rs  media.rs  pipeline.rs  project.rs  timeline.rs
crates/zeditor-core/tests/: command_tests.rs  project_tests.rs  timeline_tests.rs
crates/zeditor-media/: Cargo.toml
crates/zeditor-media/src/: audio_decoder.rs  decoder.rs  encoder.rs  error.rs  lib.rs  probe.rs  render_profile.rs  renderer.rs  thumbnail.rs
crates/zeditor-media/tests/: audio_decoder_tests.rs  decoder_tests.rs  probe_tests.rs  render_profile_tests.rs  renderer_tests.rs  thumbnail_tests.rs
crates/zeditor-test-harness/: Cargo.toml
crates/zeditor-test-harness/src/: assertions.rs  builders.rs  fixtures.rs  lib.rs
crates/zeditor-ui/: Cargo.toml
crates/zeditor-ui/src/: app.rs  audio_player.rs  lib.rs  main.rs  message.rs  test_helpers.rs
crates/zeditor-ui/src/views/: mod.rs
crates/zeditor-ui/src/widgets/: mod.rs  timeline_canvas.rs
crates/zeditor-ui/tests/: cross_crate_tests.rs  message_tests.rs  playback_tests.rs  simulator_tests.rs
scripts/: analyze_profile.py
tests/e2e/: basic_playback.ice  undo_redo.ice
