[package]
name = "zeditor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
