[package]
name = "zeditor-media"
version = "0.1.0"
edition = "2024"

[dependencies]
zeditor-core = { path = "../zeditor-core" }
rsmpeg = { version = "0.18", features = ["link_system_ffmpeg", "ffmpeg8"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
zeditor-test-harness = { path = "../zeditor-test-harness" }
tempfile = { workspace = true }
serde_json = { workspace = true }
