[package]
name = "zeditor-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
zeditor-core = { path = "../zeditor-core" }
zeditor-media = { path = "../zeditor-media" }
iced = { version = "0.14", features = ["canvas"] }
uuid = { workspace = true }

[dev-dependencies]
zeditor-test-harness = { path = "../zeditor-test-harness" }
iced_test = "0.14"
uuid = { workspace = true }
