[package]
name = "zeditor-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zeditor"
path = "src/main.rs"

[dependencies]
zeditor-core = { path = "../zeditor-core" }
zeditor-media = { path = "../zeditor-media" }
iced = { version = "0.14", features = ["canvas", "image", "tokio"] }
uuid = { workspace = true }
rfd = "0.15"

[dev-dependencies]
zeditor-test-harness = { path = "../zeditor-test-harness" }
iced_test = "0.14"
uuid = { workspace = true }
